--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "@preline/overlay": "^2.4.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "@tailwindcss/typography": "^0.5.13",
     "clsx": "^2.1.1",
     "editorjs-audio-player": "^0.0.3",
@@ -46,6 +47,7 @@
     "react-dom": "^18.3.1",
     "react-editor-js": "^2.1.0",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "simplex-noise": "^4.0.2",
     "skm-flipbox": "^1.0.3",
