added redux state management

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,10 +34,12 @@
     "@material-tailwind/html": "^2.2.2",
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.16.6",
+    "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^5.16.6",
     "@preline/overlay": "^2.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@tailwindcss/typography": "^0.5.13",
+    "@types/redux": "^3.6.0",
     "clsx": "^2.1.1",
     "editorjs-audio-player": "^0.0.3",
     "editorjs-mermaid": "^1.0.0",
